assets/template.css
html, body, #sidebar, #container {
                height: 100%;
                margin: 0px;
            }
            body {
                padding-top: 50px;
                font-family: 'Noto Sans', sans-serif;

            }
            .panel-primary {
				border-color: black;

			}
            .panel-primary .panel-heading {
				color: black;
            	background-color: #c6d66f;
				border-color: gray;


            }
            label {
                font-weight: normal;
            }
            #map {
                height: 100%;
                margin: 0px;
				padding: 15px;
                -webkit-box-shadow: 0 -1px 10px rgba(0,0,0,0.5);
                -moz-box-shadow: 0 -1px 10px rgba(0,0,0,0.5);
                box-shadow: 0 -1px 10px rgba(0,0,0,0.5);
                marker-allow-overlap: true;
                [zoom > 4] {marker-width: 0}
            }
            #loading {
                position: absolute;
                width: 220px;
                height: 19px;
                top: 50%;
                left: 50%;
                margin: -10px 0 0 -110px;
                z-index: 20001;
				display: none;
            }
            #searchbox {
                -webkit-border-top-left-radius: 4px;
                -webkit-border-bottom-left-radius: 4px;
                -moz-border-top-left-radius: 4px;
                -moz-border-bottom-left-radius: 4px;
                border-top-left-radius: 4px;
                border-bottom-left-radius: 4px;
            }
            .table {
                margin-bottom: 0px;

            }
            .navbar .navbar-brand {
                font-weight: bold;
                font-size: 22px;
                color: white;
                white-space: nowrap;
                font-family: 'Meddon', cursive;

            }
            .navbar-default {
				background: #f3904f; /* For browsers that do not support gradients */
				background: -webkit-linear-gradient(left, #1f1c2c, #928dab); /* For Safari 5.1 to 6.0 */
				background: -o-linear-gradient(right, #1f1c2c, #928dab); /* For Opera 11.1 to 12.0 */
				background: -moz-linear-gradient(right, #1f1c2c, #928dab); /* For Firefox 3.6 to 15 */
				background: linear-gradient(to right, #1f1c2c, #928dab); /* Standard syntax (must be last) */
}
            .navbar-collapse.in {
                overflow-y: hidden;
            }



.collapse-non-md {
    height: 0;
    display: none;
}
.collapse-non-md.collapsing {
    display: block;
}

@media (min-width: 992px) {
    .collapse-non-md {
        height: auto;
        display: block;
    }
}


            #sidebar-collapse {
                padding: 10px; 
                overflow-y: auto;
                max-height: 1000px;
            }

            #sidebar-collapse.in,
            #sidebar-collapse.collapsing {
                display: block!important;
            }	
			
            .tt-dropdown-menu {
                overflow: hidden;
				width: 100%;

            }
            .tt-hint, .tt-query {
                display: block;
                width: 100%;
                height: 34px;
                padding: 6px 12px;
                font-size: 14px;
                border-radius: 4px;
            }
            .typeahead-header {
                margin: 0 5px 5px 5px;
                padding: 3px 0;
                border-bottom: 2px solid #333;
            }
            .tt-suggestion + .tt-suggestion {
                border-top: 1px solid #ccc;
            }
			
			.dropdown-menu
			{
				overflow:hidden;
			}
			
			
			
            .search-container {
                width: 250px;
            }
            .leaflet-popup-content {
                margin-top: 5px;
                margin-bottom: 5px;
                margin-left: 5px;
                margin-right: 5px;
            }
            .leaflet-popup-content-wrapper {
                border-radius: 5px;
            }
            .panel-heading a:hover {
                text-decoration: none;
            }
            @media (max-width: 992px) {
                .navbar .navbar-brand {
                    font-size: 18px;
                    float: left;

                }
                .search-container {
                    width: 150px;
                }
            }
            @media (max-width: 767px){
                .search-container {
                    width: 100%;
                }
                .url-break {
                    word-break: break-all;
                    word-break: break-word;
                    -webkit-hyphens: auto;
                    hyphens: auto;
                }
            }

            /* Print Handling */
            @media print {
                .navbar, .toggle, #sidebar {
                    display: none !important;
                }
            }

